apps/blueprint/overlays/prod/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blueprint-backend
spec:
  ingressClassName: traefik
  rules:
    - host: api.blueprint-prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blueprint-backend
                port:
                  number: 3333
