apps/blueprint/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blueprint-frontend
spec:
  ingressClassName: traefik
  rules:
    - host: blueprint-prod.local.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blueprint-frontend
                port:
                  number: 80
